[package]
name = "x11-draw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.43"
x11 = { version = "2.21.0", features = ["xft", "xlib"] }

[dev-dependencies]
anyhow = "1.0.71"
penrose = { path = "../penrose" }
